// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkbox > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-disabled="false"
      class="styles__9pjq8o6"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-checked="false"
        aria-invalid="false"
        class="styles__9pjq8o5"
        id="«r0»"
        name="testing"
        type="checkbox"
      />
      <svg
        class="styles__9pjq8o3"
        fill="none"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="styles__9pjq8o1"
            height="16"
            rx="0.125rem"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
        style="--_4k0ekn3: 1;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          style="--_4k0ekn3: 1;"
        >
          <label
            class="styles__9pjq8o4 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="«r0»"
          >
            Checkbox Label
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-disabled="false"
      class="styles__9pjq8o6"
      data-checked="true"
      data-error="false"
    >
      <input
        aria-checked="true"
        aria-invalid="false"
        checked=""
        class="styles__9pjq8o5"
        id="«rf»"
        type="checkbox"
      />
      <svg
        class="styles__9pjq8o3"
        fill="none"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="styles__9pjq8o1"
            height="16"
            rx="0.125rem"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
        style="--_4k0ekn3: 1;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          style="--_4k0ekn3: 1;"
        >
          <label
            class="styles__9pjq8o4 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="«rf»"
          >
            Checkbox Label
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly checked and disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-disabled="true"
      class="styles__9pjq8o6"
      data-checked="true"
      data-error="false"
    >
      <input
        aria-checked="true"
        aria-invalid="false"
        checked=""
        class="styles__9pjq8o5"
        disabled=""
        id="«rp»"
        type="checkbox"
      />
      <svg
        class="styles__9pjq8o3"
        fill="none"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="styles__9pjq8o1"
            height="16"
            rx="0.125rem"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
        style="--_4k0ekn3: 1;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          style="--_4k0ekn3: 1;"
        >
          <label
            class="styles__9pjq8o4 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="«rp»"
          >
            Checkbox Label
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly checked with helper 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-disabled="false"
      class="styles__9pjq8o6"
      data-checked="true"
      data-error="false"
    >
      <input
        aria-checked="true"
        aria-invalid="false"
        checked=""
        class="styles__9pjq8o5"
        id="«ri»"
        type="checkbox"
      />
      <svg
        class="styles__9pjq8o3"
        fill="none"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="styles__9pjq8o1"
            height="16"
            rx="0.125rem"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
        style="--_4k0ekn3: 1;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          style="--_4k0ekn3: 1;"
        >
          <label
            class="styles__9pjq8o4 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="«ri»"
          >
            Checkbox Label
          </label>
        </div>
        <span
          class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_weak__m4c9owl style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
        >
          helper
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-disabled="true"
      class="styles__9pjq8o6"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-checked="false"
        aria-invalid="false"
        class="styles__9pjq8o5"
        disabled=""
        id="«r5»"
        type="checkbox"
      />
      <svg
        class="styles__9pjq8o3"
        fill="none"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="styles__9pjq8o1"
            height="16"
            rx="0.125rem"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
        style="--_4k0ekn3: 1;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          style="--_4k0ekn3: 1;"
        >
          <label
            class="styles__9pjq8o4 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="«r5»"
          >
            Checkbox Label
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly indeterminate 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-disabled="false"
      class="styles__9pjq8o6"
      data-checked="indeterminate"
      data-error="false"
    >
      <input
        aria-checked="mixed"
        aria-invalid="false"
        class="styles__9pjq8o5"
        id="«rm»"
        type="checkbox"
      />
      <svg
        class="styles__9pjq8o3"
        fill="none"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="styles__9pjq8o1"
            height="16"
            rx="0.125rem"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <rect
            class="styles__9pjq8o2"
            height="2"
            rx="1"
            width="12"
            x="6"
            y="11"
          />
        </g>
      </svg>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
        style="--_4k0ekn3: 1;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          style="--_4k0ekn3: 1;"
        >
          <label
            class="styles__9pjq8o4 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="«rm»"
          >
            Checkbox Label
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly indeterminate and disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-disabled="true"
      class="styles__9pjq8o6"
      data-checked="indeterminate"
      data-error="false"
    >
      <input
        aria-checked="mixed"
        aria-invalid="false"
        class="styles__9pjq8o5"
        disabled=""
        id="«rs»"
        type="checkbox"
      />
      <svg
        class="styles__9pjq8o3"
        fill="none"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="styles__9pjq8o1"
            height="16"
            rx="0.125rem"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <rect
            class="styles__9pjq8o2"
            height="2"
            rx="1"
            width="12"
            x="6"
            y="11"
          />
        </g>
      </svg>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
        style="--_4k0ekn3: 1;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          style="--_4k0ekn3: 1;"
        >
          <label
            class="styles__9pjq8o4 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="«rs»"
          >
            Checkbox Label
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly invisible 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-disabled="false"
      class="styles__9pjq8o6"
      data-checked="false"
      data-error="false"
      data-visibility="true"
    >
      <input
        aria-checked="false"
        aria-invalid="false"
        class="styles__9pjq8o5"
        id="«rv»"
        type="checkbox"
      />
      <svg
        class="styles__9pjq8o3"
        fill="none"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="styles__9pjq8o1"
            height="16"
            rx="0.125rem"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
        style="--_4k0ekn3: 1;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          style="--_4k0ekn3: 1;"
        >
          <label
            class="styles__9pjq8o4 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="«rv»"
          >
            Checkbox Label
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly no child 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-disabled="false"
      class="styles__9pjq8o6"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-checked="false"
        aria-invalid="false"
        aria-label="check"
        class="styles__9pjq8o5"
        id="«r3»"
        type="checkbox"
      />
      <svg
        class="styles__9pjq8o3"
        fill="none"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="styles__9pjq8o1"
            height="16"
            rx="0.125rem"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly required 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-disabled="false"
      class="styles__9pjq8o6"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-checked="false"
        aria-invalid="false"
        class="styles__9pjq8o5"
        id="«r8»"
        required=""
        type="checkbox"
      />
      <svg
        class="styles__9pjq8o3"
        fill="none"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="styles__9pjq8o1"
            height="16"
            rx="0.125rem"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
        style="--_4k0ekn3: 1;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          style="--_4k0ekn3: 1;"
        >
          <label
            class="styles__9pjq8o4 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="«r8»"
          >
            Checkbox Label
          </label>
          <sup
            class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_8__m4c9ow1k style_undefined_compound_72__m4c9ow3c"
          >
            *
          </sup>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly with a value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-disabled="false"
      class="styles__9pjq8o6"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-checked="false"
        aria-invalid="false"
        class="styles__9pjq8o5"
        id="«r16»"
        type="checkbox"
        value="test"
      />
      <svg
        class="styles__9pjq8o3"
        fill="none"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="styles__9pjq8o1"
            height="16"
            rx="0.125rem"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
        style="--_4k0ekn3: 1;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          style="--_4k0ekn3: 1;"
        >
          <label
            class="styles__9pjq8o4 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="«r16»"
          >
            Checkbox Label
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly with an error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-disabled="false"
      class="styles__9pjq8o6"
      data-checked="false"
      data-error="true"
    >
      <input
        aria-checked="false"
        aria-describedby="«r12»-hint"
        aria-invalid="true"
        class="styles__9pjq8o5"
        id="«r12»"
        type="checkbox"
      />
      <svg
        class="styles__9pjq8o3"
        fill="none"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="styles__9pjq8o1"
            height="16"
            rx="0.125rem"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
        style="--_4k0ekn3: 1;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          style="--_4k0ekn3: 1;"
        >
          <label
            class="styles__9pjq8o4 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="«r12»"
          >
            Checkbox Label
          </label>
        </div>
        <span
          class="styles__9pjq8o0 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_8__m4c9ow1k style_undefined_compound_72__m4c9ow3c"
        >
          test error
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly with indeterminate state 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-disabled="false"
      class="styles__9pjq8o6"
      data-checked="indeterminate"
      data-error="false"
    >
      <input
        aria-checked="mixed"
        aria-invalid="false"
        class="styles__9pjq8o5"
        id="«r19»"
        type="checkbox"
      />
      <svg
        class="styles__9pjq8o3"
        fill="none"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="styles__9pjq8o1"
            height="16"
            rx="0.125rem"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <rect
            class="styles__9pjq8o2"
            height="2"
            rx="1"
            width="12"
            x="6"
            y="11"
          />
        </g>
      </svg>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
        style="--_4k0ekn3: 1;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          style="--_4k0ekn3: 1;"
        >
          <label
            class="styles__9pjq8o4 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="«r19»"
          >
            Checkbox Label
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly with tooltip 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="«rd»"
      aria-describedby="«rd»"
      class="styles__w40vpo9"
      tabindex="0"
    >
      <div
        aria-disabled="false"
        class="styles__9pjq8o6"
        data-checked="false"
        data-error="false"
      >
        <input
          aria-checked="false"
          aria-invalid="false"
          class="styles__9pjq8o5"
          id="«rc»"
          type="checkbox"
        />
        <svg
          class="styles__9pjq8o3"
          fill="none"
          viewBox="0 0 24 24"
        >
          <g>
            <rect
              class="styles__9pjq8o1"
              height="16"
              rx="0.125rem"
              stroke-width="2"
              width="16"
              x="4"
              y="4"
            />
            <path
              clip-rule="evenodd"
              d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
              fill="white"
              fill-rule="evenodd"
              height="9"
              width="12"
              x="5"
              y="4"
            />
          </g>
        </svg>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          style="--_4k0ekn3: 1;"
        >
          <div
            class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
            style="--_4k0ekn3: 1;"
          >
            <label
              class="styles__9pjq8o4 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
              for="«rc»"
            >
              Checkbox Label
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
